<resources>
    <!-- Login Fragment -->
    <string name="email_edit_text_hint">Email</string>
    <string name="password_edit_text_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="create_account_button">Create New Account</string>
    <!-- Register Fragment -->
    <string name="name_edit_text_hint">Name</string>
    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>
    <!-- Account Fragment -->
    <string name="welcome_text_view">Welcome !!</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="log_out_button">Log Out</string>
    <string name="app_name">InClass04</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>