<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <EditText
        android:id="@+id/emailEditTextRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/email_edit_text_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/nameEditTextRegister"
        app:layout_constraintStart_toStartOf="@+id/nameEditTextRegister"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordEditTextRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_edit_text_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/emailEditTextRegister"
        app:layout_constraintStart_toStartOf="@+id/emailEditTextRegister"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextRegister" />

    <Button
        android:id="@+id/submitButtonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit_button"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditTextRegister"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/passwordEditTextRegister"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextRegister" />

    <EditText
        android:id="@+id/nameEditTextRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/name_edit_text_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancelButtonRegister"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/cancel_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitButtonRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>