<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateAccountFragment" >

    <TextView
        android:id="@+id/emailTextViewUpdateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameEditTextUpdateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/name_edit_text_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextViewUpdateAccount" />

    <EditText
        android:id="@+id/passwordEditTextUpdateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password_edit_text_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/nameEditTextUpdateAccount"
        app:layout_constraintStart_toStartOf="@+id/nameEditTextUpdateAccount"
        app:layout_constraintTop_toBottomOf="@+id/nameEditTextUpdateAccount" />

    <Button
        android:id="@+id/submitButtonUpdateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditTextUpdateAccount"
        app:layout_constraintStart_toStartOf="@+id/passwordEditTextUpdateAccount"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextUpdateAccount" />

    <Button
        android:id="@+id/cancelButtonUpdate"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/cancel_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitButtonUpdateAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>